--------------------------------------------------------------------------------------------------
Release notes version 1.8.3_beta : Enhancements, modifications and corrected bugs since version 1.8.2 :
--------------------------------------------------------------------------------------------------
15/04/21 (TRUST)  Portability : GNU compilers 10.3.0 supported
15/04/21 (TRUST)  New keyword : Impliciting diffusive terms may now be used with a larger choice for solvers ('solveur' option in Paremetre_diffusion_implicite keyword). See diffusion_implicite_solveur validation sheet
12/04/21 (TRUST)  New feature : mpi4py Python package now provided by default in the TRUST Python environment when compiling with MPI.
31/03/21 (TRUST)  New feature : ICoCo (Interface for Code Coupling) version 2! See https://github.com/cea-trust-platform/icoco-coupling for full reference.
30/03/21 (TRUST)  Performance : Faster partitioning by disabling printing of remote (ghosts) elements (add a print_more_info option to enable it). 
30/03/21 (TRUST)  Warning     : Detect in VDF a (rare case) with cells near two fluid faces corner where a missing contribution is not computed yet for several schemes except upwind scheme
30/03/21 (TRUST)  Bug fixed   : Useless write of a result file (containing mesh only) with no fields post_processing block
30/03/21 (TRUST)  Bug fixed   : Add messages to enhance PolyMAC use : detect incorrect mesh or time scheme
30/03/21 (TRUST)  New option  : Add convertAllToPoly option to LireMED keyword to convert mixed type cells mesh (eg. tetra and hexa) to polyedras/polygons only cells
09/03/21 (TRUST)  Keyword     : Terme_puissance_thermique_echange_impose to set a thermal source term P=h(T-Text) now available in VDF
08/03/21 (TRUST)  New feature : Possible to post-process a component of an equation operator/source (Operateur_Eqn option of Definition_champs block)